update: solver, graph, utils, plot

--- a/src/playground/classical_sover.ipynb
+++ b/src/playground/classical_sover.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
     "\n",
     "\n",
     "#number of entities\n",
-    "carrier_number = 20#rng.randint(100,200)\n",
-    "transportable_number = 20#rng.randint(100,200)\n",
+    "carrier_number = 10#rng.randint(100,200)\n",
+    "transportable_number = 10#rng.randint(100,200)\n",
     "\n",
     "\n",
     "#functions to select random nodes\n",
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time = 8.922446374 seconds\n"
+      "Time = 6.484008211999999 seconds\n"
      ]
     }
    ],
@@ -386,12 +386,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "carriers = [1427, 108, 976, 427, 1260, 1013, 1377, 779, 628, 815]\n",
     "transportables = [47, 458, 1280, 1561, 72, 49, 637, 853, 1491, 196]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n",
+      "[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10. 11. 12. 13. 14. 15. 16. 17. 18.\n",
+      " 19. 20. 11. 12. 13. 14. 15. 16. 17. 18. 19. 20. 11. 12. 13. 14. 15. 16.\n",
+      " 17. 18. 19. 20. 11. 12. 13. 14. 15. 16. 17. 18. 19. 20. 11. 12. 13. 14.\n",
+      " 15. 16. 17. 18. 19. 20. 11. 12. 13. 14. 15. 16. 17. 18. 19. 20. 11. 12.\n",
+      " 13. 14. 15. 16. 17. 18. 19. 20. 11. 12. 13. 14. 15. 16. 17. 18. 19. 20.\n",
+      " 11. 12. 13. 14. 15. 16. 17. 18. 19. 20. 11. 12. 13. 14. 15. 16. 17. 18.\n",
+      " 19. 20.]\n",
+      "capacities [1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
+      " 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
+      " 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
+      " 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
+      " 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  1.  1.  1.  1.  1.  1.  1.\n",
+      "  1.  1.  2.  2.  2.  2.  2.  2.  2.  2.  2.  2.  3.  3.  3.  3.  3.  3.\n",
+      "  3.  3.  3.  3.  4.  4.  4.  4.  4.  4.  4.  4.  4.  4.  5.  5.  5.  5.\n",
+      "  5.  5.  5.  5.  5.  5.  6.  6.  6.  6.  6.  6.  6.  6.  6.  6.  7.  7.\n",
+      "  7.  7.  7.  7.  7.  7.  7.  7.  8.  8.  8.  8.  8.  8.  8.  8.  8.  8.\n",
+      "  9.  9.  9.  9.  9.  9.  9.  9.  9.  9. 10. 10. 10. 10. 10. 10. 10. 10.\n",
+      " 10. 10. 11. 12. 13. 14. 15. 16. 17. 18. 19. 20.]\n",
+      "[ 0  0  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  1  1  2  2  2  2\n",
+      "  2  2  2  2  2  2  3  3  3  3  3  3  3  3  3  3  4  4  4  4  4  4  4  4\n",
+      "  4  4  5  5  5  5  5  5  5  5  5  5  6  6  6  6  6  6  6  6  6  6  7  7\n",
+      "  7  7  7  7  7  7  7  7  8  8  8  8  8  8  8  8  8  8  9  9  9  9  9  9\n",
+      "  9  9  9  9 10 10 10 10 10 10 10 10 10 10 11 12 13 14 15 16 17 18 19 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "n_carrier = len(carriers)\n",
+    "n_transportables = len(transportables)\n",
+    "\n",
+    "min_cost_flow = pywrapgraph.SimpleMinCostFlow()\n",
+    "#       min_cost_flow = pywrapgraph.GenericMinCostFlow()\n",
+    "#       min_cost_flow = pywrapgraph.MinCostFlowBase()\n",
+    "#       min_cost_flow = pywrapgraph.MinCostFlow()\n",
+    "\n",
+    "# Define the directed graph for the flow.\n",
+    "start_nodes = np.zeros(n_carrier)\n",
+    "# print(start_nodes)\n",
+    "for i in range(n_carrier):\n",
+    "    start_nodes = np.concatenate((start_nodes , np.full(n_connections[i],i+1)))\n",
+    "# print(start_nodes)\n",
+    "start_nodes = np.concatenate((start_nodes , np.linspace(n_carrier+1,n_carrier+n_transportables,n_transportables)))\n",
+    "# print(start_nodes)\n",
+    "\n",
+    "end_nodes = np.linspace(1,n_carrier,n_carrier)\n",
+    "print(end_nodes)\n",
+    "end_nodes = np.concatenate((end_nodes , connections))\n",
+    "print(end_nodes)\n",
+    "end_nodes = np.concatenate((end_nodes , np.full(n_transportables,n_carrier+n_transportables+1)))\n",
+    "\n",
+    "capacities =np.zeros(n_carrier+sum(n_connections)+n_transportables)+1\n",
+    "print('capacities',capacities)\n",
+    "\n",
+    "costs = np.concatenate((np.zeros(n_carrier), weight_list, np.zeros(n_transportables)))\n",
+    "\n",
+    "print(start_nodes)\n",
+    "\n",
+    "start_nodes = start_nodes.astype(int)\n",
+    "\n",
+    "print(start_nodes)\n",
+    "\n",
+    "end_nodes = end_nodes.astype(int)\n",
+    "capacities = capacities.astype(int)\n",
+    "costs = costs.astype(int)\n",
+    "\n",
+    "start_nodes = start_nodes.tolist()\n",
+    "end_nodes = end_nodes.tolist()\n",
+    "capacities = capacities.tolist()\n",
+    "costs = costs.tolist()\n",
+    "\n",
+    "source = 0\n",
+    "sink = n_carrier+n_transportables+1\n",
+    "tasks = n_transportables\n",
+    "\n",
+    "supplies = np.concatenate(([min(n_carrier,n_transportables)], np.zeros(n_carrier+n_transportables),[-min(n_carrier,n_transportables)]))\n",
+    "supplies = supplies.astype(int)\n",
+    "supplies = supplies.tolist()\n",
+    "\n",
+    "# Add each arc.\n",
+    "for i in range(len(start_nodes)):\n",
+    "    min_cost_flow.AddArcWithCapacityAndUnitCost(start_nodes[i], end_nodes[i],capacities[i], costs[i])\n",
+    "# Add node supplies.\n",
+    "\n",
+    "for i in range(len(supplies)):\n",
+    "    min_cost_flow.SetNodeSupply(i, supplies[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_connections = connection_number\n",
+    "connections = connection_list"
    ]
   },
   {
